# ChatICU

./: .env.example  .env.production  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_START_FRONTEND_BACKEND.md  README.md  SECURITY.md  TASKS.md  TASK_TRACKER.md  config.py  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vercel.json  vite.config.ts
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  alembic.ini  docker-compose.offline.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_password_history.py  003_pharmacy_advices.py  004_ai_session_summary.py  005_patient_unit.py  006_pharmacy_compatibility_favorites.py  007_med_admins.py  008_add_foreign_keys.py  009_add_composite_indexes.py  010_clinical_scores.py  010_schema_hardening.py  013_message_replies.py  (+69 more)
backend/app/: config.py  database.py  llm.py  main.py  startup_migrations.py
backend/config/: source_priorities.json
backend/docs/: API_CONTRACT.md  ARCHITECTURE.md  fix-tracker.md  openapi.json
backend/scripts/: audit_alt_mrn.py  b15_baseline_synthetic.py  b15_snapshot_audit.py  backfill_drug_interactions_atc.py  backfill_orphan_advice.py  build_formulary_csv.py  chaticu_his_sync.crontab.example  fhir_baseline_audit.py  import_his_patients.py  install_his_sync_launchd.sh  keep_mac_awake.sh  refresh_rxnorm_cache.py  run_his_snapshot_sync.sh  run_seed_repair.py  seed_duplicate_groups.py  sync_his_snapshots.py  sync_his_snapshots_serial.py  upgrade_xd_from_lexicomp.py
backend/seeds/: datamock_source.py  icu_drug_interactions.json  icu_y_site_compatibility_v2_lookup.json  seed_culture_results.py  seed_data.py  seed_if_empty.py  validate_datamock.py
backend/tests/: conftest.py  test_e2e_llm.py  test_llm.py  test_llm_param_helper.py
(+910 files in other folders)
