[project]
name = "chaticu-backend"
version = "1.0.0"
description = "ChatICU — ICU Clinical Decision Support API"
requires-python = ">=3.9"

[tool.bandit]
exclude_dirs = ["tests", "seeds", "alembic"]
skips = ["B101"]  # B101: assert_used — acceptable in tests
severity = "medium"

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/conftest.py"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "alembic"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
